# personal_website

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  Pipfile  Procfile  README.md  app.py  datastore.py  lolesports.py  project_setup.py  pyproject.toml  redis_setup.py  requirements.txt  riot.py  test_website.py  twitter.py  website.py
static/css/: magister.css
static/css/old/: magister.css
static/js/: magister.js
static/js/old/: magister.js
templates/: base.html  index.html  old_index.html
templates/demo/: index.html
templates/old/: base.html  index.html
